hanu-deploy-apps/openstack/nova/Ingress_placement.yaml

# Source: nova/templates/ingress-placement.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: placement
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: placement
      http:
        paths:
          - path: /
            backend:
              serviceName: placement-api
              servicePort: p-api
    - host: placement.openstack
      http:
        paths:
          - path: /
            backend:
              serviceName: placement-api
              servicePort: p-api
    - host: placement.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: placement-api
              servicePort: p-api
